Retry call caching centaur tests
